<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.BookActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/bookCoverImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/under_the_dome_cover" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="240dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="160dp" />

            <TextView
                android:id="@+id/bookTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="Заголовок"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/autorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Автор"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhiteMedium"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/bookTitleTextView" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="888 руб."
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/bookCoverImageView"
                app:layout_constraintTop_toBottomOf="@+id/autorTextView" />

            <ImageView
                android:id="@+id/ratingImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:tint="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />

            <TextView
                android:id="@+id/ratingTView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9.28"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
                app:layout_constraintStart_toEndOf="@+id/ratingImageView"
                app:layout_constraintTop_toTopOf="@+id/ratingImageView"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/commentsTView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="888"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
                app:layout_constraintStart_toEndOf="@+id/commentsImageView"
                app:layout_constraintTop_toTopOf="@+id/ratingImageView"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/imagesTView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="888"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
                app:layout_constraintStart_toEndOf="@+id/imagesImageView"
                app:layout_constraintTop_toTopOf="@+id/ratingImageView"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/commentsImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:tint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/ratingTView"
                app:layout_constraintStart_toEndOf="@+id/ratingTView"
                app:layout_constraintTop_toTopOf="@+id/ratingTView"
                app:srcCompat="@drawable/ic_message_black_24dp" />

            <ImageView
                android:id="@+id/imagesImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:tint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/commentsTView"
                app:layout_constraintStart_toEndOf="@+id/commentsTView"
                app:layout_constraintTop_toTopOf="@+id/commentsTView"
                app:srcCompat="@drawable/ic_collections_black_24dp" />

            <Button
                android:id="@+id/addRecensionButton"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimaryTransient"
                android:text="@string/write_review_btn"
                android:textColor="@color/colorPrimaryLight"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/ratingImageView"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/shortDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2">

                <TextView
                    android:id="@+id/shortDescriptionLableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/description_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhiteMedium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    style="@style/Base.Widget.MaterialComponents.TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="Какое то ну ооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооооочень длиииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииинное описааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааание"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shortDescriptionLableTextView" />

                <Button
                    android:id="@+id/expandDescriptionBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/expand_text_btn"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortDescriptionLayout" />

            <TextView
                android:id="@+id/publisherLableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/publisher_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhiteMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/genreLableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/genre_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhiteMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/publisherTextView" />

            <TextView
                android:id="@+id/dateLableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/year_of_publication_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhiteMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreTextView" />

            <TextView
                android:id="@+id/publisherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Какой то издатель"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/publisherLableTextView" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Какой то жанр"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreLableTextView" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Какая то дата"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateLableTextView" />

            <Button
                android:id="@+id/showReviewBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/all_reviews_btn"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showAllInfoBtn" />

            <Button
                android:id="@+id/showAllInfoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/all_book_info_btn"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bookTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:collapseIcon="@drawable/app_icon_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/catalog_menu" />

        <ImageView
            android:id="@+id/bookAvatarImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bookButtomAppBur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:itemIconTint="@color/design_default_color_background"
            app:itemTextColor="@color/design_default_color_background"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_nav_bar" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>